name:                nano-http
version:             0.1.3
synopsis:            A lightweight wrapper around conduit
description:         A lightweight wrapper around conduit
homepage:            https://github.com/ralphmorton/nano-http#readme
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
copyright:           Ralph Morton
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.HTTP.Nano.Types, Network.HTTP.Nano
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.1.3.1
                     , bytestring >= 0.10.6.0
                     , lens >= 4.13
                     , aeson >= 0.9.0.1
                     , http-client >= 0.4.28
                     , http-types >= 0.9
                     , http-conduit >= 2.1.8
                     , conduit >= 1.2.6.4
                     , resourcet >= 1.1.7.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ralphmorton/nano-http
